# dagster-advent-of-code

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
dagster_advent_of_code/: day_1_pipeline.py  day_1_pipeline_2_items.yaml  day_1_pipeline_3_items.yaml
tests/: test_dagster_advent_of_code.py  test_day_1_pipeline.py
