[tool.poetry]
name = "dagster-advent-of-code"
version = "0.1.0"
description = ""
authors = ["Alex C. Viana <alexcostaviana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^0.10.9"
dagit = "^0.10.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.812"
pre-commit = "^2.11.1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
